@@ -8,6 +8,10 @@ list.proto.copy     = fn () modules.list_fn.list_copy(this);
 list.proto.append   = fn (x) modules.list_fn.list_append(this, x);
 list.proto.prepend  = fn (x) modules.list_fn.list_prepend(this, x);
 list.proto.extend   = fn (l) modules.list_fn.list_extend(this, l);
+list.proto.pop      = fn () modules.list_fn.list_poplast(this);
+list.proto.push     = fn () modules.list_fn.list_append(this);
+list.proto.shift    = fn () modules.list_fn.list_popfirst(this);
+list.proto.unshift  = fn () modules.list_fn.list_prepend(this);
 list.proto.to_tuple = fn () modules.list_fn.list_to_tuple(this);
 list.proto.iter     = fn () {
   i = modules.list_fn.list_begin(this);
