@@ -7,9 +7,9 @@
 extern _rha_ list_t    list_new();
 extern _rha_ list_t    list_copy(list_t l);
 extern _rha_ int_t     list_len(list_t l);
-extern _rha_ void      list_append(list_t, object_t o);
-extern _rha_ void      list_prepend(list_t, object_t o);
-extern _rha_ void      list_extend(list_t, list_t);
+extern _rha_ list_t    list_append(list_t, object_t o);
+extern _rha_ list_t    list_prepend(list_t, object_t o);
+extern _rha_ list_t    list_extend(list_t, list_t);
 
 extern _rha_ list_t    list_literal(list_t parsetree);
 
